fixed alignment

--- a/chromium/pages/options/options.css
+++ b/chromium/pages/options/options.css
@@ -49,7 +49,7 @@ input[type="checkbox"] + label {
 }
 
 .align {
-    margin: 26px 0px 8px;
+    margin: 22px 0px 8px;
 }
 
 .group {
